--- a/src/com/stockops/UI/Investor/RetailInvestorJPanel.form
+++ b/src/com/stockops/UI/Investor/RetailInvestorJPanel.form
@@ -403,7 +403,7 @@
         <Component class="javax.swing.JLabel" name="lblCLP">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="264" y="161" width="-1" height="-1"/>
+              <AbsoluteConstraints x="300" y="270" width="70" height="10"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -450,7 +450,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="310" y="380" width="70" height="-1"/>
+              <AbsoluteConstraints x="310" y="380" width="150" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -522,7 +522,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="310" y="340" width="70" height="-1"/>
+              <AbsoluteConstraints x="310" y="340" width="150" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -1693,10 +1693,12 @@
                           <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="txtAvailableBalance3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jComboBox4" min="-2" pref="53" max="-2" attributes="0"/>
                               <Component id="lblCLP3" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Group type="102" attributes="0">
-                                  <Component id="txtQtyComm2" min="-2" pref="144" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="jComboBox4" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtQtyComm2" alignment="0" pref="144" max="32767" attributes="0"/>
+                                  </Group>
                                   <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                                   <Component id="lblCommUnit" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
@@ -1788,9 +1790,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblCLP3">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jLabel11"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel25">
           <Properties>
@@ -1953,7 +1952,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jPanel12" pref="2865" max="32767" attributes="0"/>
+              <Component id="jPanel12" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
